--- a/CriminalIntent/src/main/AndroidManifest.xml
+++ b/CriminalIntent/src/main/AndroidManifest.xml
@@ -17,8 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".CrimeActivity"
-            android:label="@string/app_name">
+        <activity
+            android:name=".CrimePagerActivity"
+            android:label="@string/app_name"
+            >
         </activity>
     </application>
 
