--- a/CriminalIntent/src/main/AndroidManifest.xml
+++ b/CriminalIntent/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:label="@string/app_name"
             >
         </activity>
+        <activity android:name=".DatePickerActivity">
+        </activity>
+        <activity android:name=".TimePickerActivity">
+        </activity>
     </application>
 
 </manifest>
