--- a/CriminalIntent/src/main/AndroidManifest.xml
+++ b/CriminalIntent/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity
             android:name=".CrimePagerActivity"
             android:label="@string/app_name"
+            android:parentActivityName=".CrimeListActivity"
             >
         </activity>
         <activity android:name=".DatePickerActivity">
