--- a/CriminalIntent/src/main/AndroidManifest.xml
+++ b/CriminalIntent/src/main/AndroidManifest.xml
@@ -4,6 +4,15 @@
     >
 
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18"
+        />
+
+    <uses-feature
+        android:name="android.hardware.camera2"
+        android:required="false"
+        />
 
     <application
         android:allowBackup="true"
