--- a/BeatBox/build.gradle
+++ b/BeatBox/build.gradle
@@ -5,7 +5,7 @@ android {
   buildToolsVersion "23.0.3"
 
   defaultConfig {
-    applicationId "com.bignerdranch.android.criminalintent"
+    applicationId "com.bignerdranch.android.beatbox"
     minSdkVersion 16
     targetSdkVersion 23
     versionCode 1
@@ -22,7 +22,7 @@ android {
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
-  compile 'com.android.support:appcompat-v7:23.2.1'
-  compile 'com.android.support:support-v4:23.2.1'
-  compile 'com.android.support:recyclerview-v7:23.2.1'
+  compile 'com.android.support:appcompat-v7:23.4.0'
+  compile 'com.android.support:recyclerview-v7:23.4.0'
+  compile 'com.android.support:support-v4:23.4.0'
 }
