--- a/NerdLauncher/src/main/AndroidManifest.xml
+++ b/NerdLauncher/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         <activity android:name=".NerdLauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.HOME"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
     </application>
