第23章 HTTP与后台任务 PhotoGallery

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':GeoQuiz', ':CriminalIntent', ':BeatBox', ':NerdLauncher'
+include ':GeoQuiz', ':CriminalIntent', ':BeatBox', ':NerdLauncher', ':PhotoGallery'
